# asciiify

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/asciiify-cli/: Cargo.toml  README.md
crates/asciiify-cli/src/: cli.rs  main.rs  player.rs
crates/asciiify-core/: Cargo.toml  README.md
crates/asciiify-core/src/: audio.rs  charset.rs  converter.rs  error.rs  image.rs  lib.rs  options.rs  video.rs
crates/asciiify-core/tests/: integration.rs
crates/asciiify-go/: Cargo.toml  README.md  asciiify.go  asciiify.h  build.rs  cbindgen.toml  go.mod
crates/asciiify-go/cmd/asciiify/: main.go
crates/asciiify-go/src/: lib.rs
crates/asciiify-js/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json  test.mjs  tsconfig.json
crates/asciiify-js/src/: lib.rs
crates/asciiify-py/: Cargo.toml  README.md  pyproject.toml  test_asciiify.py
crates/asciiify-py/python/asciiify/: __init__.py  __main__.py
crates/asciiify-py/src/: lib.rs
