[package]
name = "asciiify-go"
version = "0.2.0"
edition = "2021"
authors = ["Tomer Ramkovich"]

[lib]
name = "asciiify_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
asciiify-core = { version = "0.2.0", path = "../asciiify-core" }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
