[package]
name = "asciiify-py"
version = "0.2.0"
edition = "2021"
authors = ["Tomer Ramkovich"]

[lib]
name = "_asciiify"
crate-type = ["cdylib"]

[dependencies]
asciiify-core = { version = "0.2.0", path = "../asciiify-core" }
pyo3 = { version = "0.24", features = ["extension-module", "generate-import-lib", "abi3-py39"] }
