[package]
name = "asciiify-py"
version = "0.4.0"
edition = "2021"
authors = ["Tomer Ramkovich"]

[lib]
name = "_asciiify"
crate-type = ["cdylib"]

[features]
default = ["video"]
video = ["asciiify-core/video", "dep:rodio"]

[dependencies]
asciiify-core = { version = "0.4.0", path = "../asciiify-core" }
pyo3 = { version = "0.24", features = ["extension-module", "generate-import-lib", "abi3-py39"] }
rodio = { version = "0.19", optional = true }
