[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "asciiify"
version = "0.3.0"
description = "Convert images and video to ASCII art"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Tomer Ramkovich"}]

[project.scripts]
asciiify = "asciiify.__main__:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "asciiify._asciiify"
